payload/manifests/utility/gitea.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: git
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-ingress
  namespace: git
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stuart-gitea-http
                port:
                  number: 3000
