payload/manifests/utility/registry.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: kevin-docker-registry
                port:
                  number: 5000
